merged dashboard